The py package, which has the vulnurability was a dependency of pytest-codestyle. Removed the codestyle package. lost ability to run code style test.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,6 @@ dev = [
     "pip-tools",
     "pypandoc",
     "pytest-cov",
-    "pytest-pycodestyle",
     "pytest-runner",
     "twine",
     "tomli-w"
@@ -64,7 +63,7 @@ version = {attr = "piplicenses.__version__"}
 readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}
 
 [tool.pytest.ini_options]
-addopts = "--pycodestyle -v --cov --cov-report term-missing"
+addopts = "-v --cov --cov-report term-missing"
 
 [tool.black]
 line-length = 79
