--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,7 +32,7 @@ jobs:
           if [ -f dev-requirements.txt ]; then pip install -r dev-requirements.txt; fi
       - name: Test with pytest
         run: |
-          pytest --pycodestyle -v --cov --cov-report=xml
+          pytest -v --cov --cov-report=xml
       - name: Validate static typing with mypy
         run: |
           mkdir -p .mypy_cache
